# OpenMP_OpenCL

./: .gitignore  CMakeLists.txt  README.md  opencl.c  openmp.c
